--- a/payload/package.json
+++ b/payload/package.json
@@ -18,6 +18,8 @@
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
   },
   "dependencies": {
+    "@innovixx/payload-color-picker-field": "^2.0.2",
+    "@payloadcms/db-postgres": "3.44.0",
     "@payloadcms/next": "3.44.0",
     "@payloadcms/payload-cloud": "3.44.0",
     "@payloadcms/richtext-lexical": "3.44.0",
@@ -28,8 +30,7 @@
     "next": "15.3.2",
     "payload": "3.44.0",
     "react": "19.1.0",
-    "sharp": "0.32.6",
-    "@payloadcms/db-postgres": "3.44.0"
+    "sharp": "0.32.6"
   },
   "devDependencies": {
     "@playwright/test": "1.50.0",
