--- a/payload/package.json
+++ b/payload/package.json
@@ -19,16 +19,18 @@
   },
   "dependencies": {
     "@innovixx/payload-color-picker-field": "^2.0.2",
-    "@payloadcms/db-postgres": "3.44.0",
-    "@payloadcms/next": "3.44.0",
-    "@payloadcms/payload-cloud": "3.44.0",
-    "@payloadcms/richtext-lexical": "3.44.0",
-    "@payloadcms/ui": "3.44.0",
+    "@payloadcms/db-postgres": "3.49.0",
+    "@payloadcms/next": "3.49.0",
+    "@payloadcms/payload-cloud": "3.49.0",
+    "@payloadcms/plugin-cloud-storage": "3.49.0",
+    "@payloadcms/richtext-lexical": "3.49.0",
+    "@payloadcms/storage-uploadthing": "^3.49.0",
+    "@payloadcms/ui": "3.49.0",
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
     "graphql": "^16.8.1",
     "next": "15.3.2",
-    "payload": "3.44.0",
+    "payload": "3.49.0",
     "react": "19.1.0",
     "sharp": "0.32.6"
   },
